minimum spanning tree kata first day