@@ -6,10 +6,10 @@ import org.apache.commons.lang3.tuple.ImmutableTriple;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.commons.lang3.tuple.Triple;
 import org.junit.Before;
-import org.junit.Ignore;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -31,33 +31,33 @@ public class JoinTest {
 
     public class Inner {
 
-        private List<Triple<Integer, Integer, Integer>> result = List.of(
+        private List<Triple<Integer, Integer, Integer>> result = Arrays.asList(
                 new ImmutableTriple<>(1, 1, 1),
                 new ImmutableTriple<>(2, 2, 2),
                 new ImmutableTriple<>(3, 3, 3),
                 new ImmutableTriple<>(4, 4, 4)
         );
 
-        private List<Pair<Integer, Integer>> view = List.of(
+        private List<Pair<Integer, Integer>> view = Arrays.asList(
                 new ImmutablePair<>(1, 1),
                 new ImmutablePair<>(2, 2),
                 new ImmutablePair<>(3, 3),
                 new ImmutablePair<>(4, 4)
         );
 
-        private List<Triple<Integer, Integer, Integer>> leftRight = List.of(
+        private List<Triple<Integer, Integer, Integer>> leftRight = Arrays.asList(
                 new ImmutableTriple<>(1, 1, 1),
                 new ImmutableTriple<>(2, 2, 2),
                 new ImmutableTriple<>(4, 4, 4)
         );
 
-        private List<Pair<Integer, Integer>> left = List.of(
+        private List<Pair<Integer, Integer>> left = Arrays.asList(
                 new ImmutablePair<>(1, 1),
                 new ImmutablePair<>(2, 2),
                 new ImmutablePair<>(4, 4)
         );
 
-        private List<Pair<Integer, Integer>> right = List.of(
+        private List<Pair<Integer, Integer>> right = Arrays.asList(
                 new ImmutablePair<>(1, 1),
                 new ImmutablePair<>(2, 2),
                 new ImmutablePair<>(4, 4),
@@ -97,25 +97,25 @@ public class JoinTest {
 
     public class LeftJoin {
 
-        List<Triple<Integer, Integer, Integer>> leftRight = List.of(
+        List<Triple<Integer, Integer, Integer>> leftRight = Arrays.asList(
                 new ImmutableTriple<>(1, 1, 1),
                 new ImmutableTriple<>(2, 2, null),
                 new ImmutableTriple<>(4, 4, null)
         );
 
-        List<Triple<Integer, Integer, Integer>> rightLeft = List.of(
+        List<Triple<Integer, Integer, Integer>> rightLeft = Arrays.asList(
                 new ImmutableTriple<>(1, 1, 1),
                 new ImmutableTriple<>(3, 3, null),
                 new ImmutableTriple<>(5, 5, null)
         );
 
-        List<Pair<Integer, Integer>> left = List.of(
+        List<Pair<Integer, Integer>> left = Arrays.asList(
                 new ImmutablePair<>(1, 1),
                 new ImmutablePair<>(2, 2),
                 new ImmutablePair<>(4, 4)
         );
 
-        List<Pair<Integer, Integer>> right = List.of(
+        List<Pair<Integer, Integer>> right = Arrays.asList(
                 new ImmutablePair<>(1, 1),
                 new ImmutablePair<>(3, 3),
                 new ImmutablePair<>(5, 5)
@@ -153,25 +153,25 @@ public class JoinTest {
     }
 
     public class RightJoin {
-        List<Triple<Integer, Integer, Integer>> rightLeft = List.of(
+        List<Triple<Integer, Integer, Integer>> rightLeft = Arrays.asList(
                 new ImmutableTriple<>(1, 1, 1),
                 new ImmutableTriple<>(2, 2, null),
                 new ImmutableTriple<>(4, 4, null)
         );
 
-        List<Triple<Integer, Integer, Integer>> leftRight = List.of(
+        List<Triple<Integer, Integer, Integer>> leftRight = Arrays.asList(
                 new ImmutableTriple<>(1, 1, 1),
                 new ImmutableTriple<>(3, 3, null),
                 new ImmutableTriple<>(5, 5, null)
         );
 
-        List<Pair<Integer, Integer>> right = List.of(
+        List<Pair<Integer, Integer>> right = Arrays.asList(
                 new ImmutablePair<>(1, 1),
                 new ImmutablePair<>(2, 2),
                 new ImmutablePair<>(4, 4)
         );
 
-        List<Pair<Integer, Integer>> left = List.of(
+        List<Pair<Integer, Integer>> left = Arrays.asList(
                 new ImmutablePair<>(1, 1),
                 new ImmutablePair<>(3, 3),
                 new ImmutablePair<>(5, 5)
