@@ -9,6 +9,7 @@ import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -29,32 +30,32 @@ public class JoinTest {
     }
 
     public class InnerJoin {
-        private List<Triple<Integer, Integer, Integer>> result = List.of(
+        private List<Triple<Integer, Integer, Integer>> result = Arrays.asList(
                 new ImmutableTriple<>(1, 1, 1),
                 new ImmutableTriple<>(2, 2, 2),
                 new ImmutableTriple<>(3, 3, 3),
                 new ImmutableTriple<>(4, 4, 4)
         );
-        private List<Pair<Integer, Integer>> view = List.of(
+        private List<Pair<Integer, Integer>> view = Arrays.asList(
                 new ImmutablePair<>(1, 1),
                 new ImmutablePair<>(2, 2),
                 new ImmutablePair<>(3, 3),
                 new ImmutablePair<>(4, 4)
         );
-        private List<Triple<Integer, Integer, Integer>> leftRight = List.of(
+        private List<Triple<Integer, Integer, Integer>> leftRight = Arrays.asList(
                 new ImmutableTriple<>(1, 1, 1),
                 new ImmutableTriple<>(2, 2, 2),
                 new ImmutableTriple<>(4, 4, 4)
         );
 
-        private List<Pair<Integer, Integer>> left = List.of(
+        private List<Pair<Integer, Integer>> left = Arrays.asList(
                 new ImmutablePair<>(1, 1),
                 new ImmutablePair<>(2, 2),
                 new ImmutablePair<>(4, 4),
                 new ImmutablePair<>(6, 6)
         );
 
-        private List<Pair<Integer, Integer>> right = List.of(
+        private List<Pair<Integer, Integer>> right = Arrays.asList(
                 new ImmutablePair<>(1, 1),
                 new ImmutablePair<>(2, 2),
                 new ImmutablePair<>(4, 4),
@@ -94,25 +95,25 @@ public class JoinTest {
 
     public class OuterLeftJoin {
 
-        private List<Triple<Integer, Integer, Integer>> leftRight = List.of(
+        private List<Triple<Integer, Integer, Integer>> leftRight = Arrays.asList(
                 new ImmutableTriple<>(1, 1, 1),
                 new ImmutableTriple<>(2, 2, null),
                 new ImmutableTriple<>(4, 4, null)
         );
 
-        private List<Triple<Integer, Integer, Integer>> rightLeft = List.of(
+        private List<Triple<Integer, Integer, Integer>> rightLeft = Arrays.asList(
                 new ImmutableTriple<>(1, 1, 1),
                 new ImmutableTriple<>(3, 3, null),
                 new ImmutableTriple<>(5, 5, null)
         );
 
-        private List<Pair<Integer, Integer>> left = List.of(
+        private List<Pair<Integer, Integer>> left = Arrays.asList(
                 new ImmutablePair<>(1, 1),
                 new ImmutablePair<>(2, 2),
                 new ImmutablePair<>(4, 4)
         );
 
-        private List<Pair<Integer, Integer>> right = List.of(
+        private List<Pair<Integer, Integer>> right = Arrays.asList(
                 new ImmutablePair<>(1, 1),
                 new ImmutablePair<>(3, 3),
                 new ImmutablePair<>(5, 5)
@@ -151,25 +152,25 @@ public class JoinTest {
 
     public class OuterRight {
 
-        private List<Triple<Integer, Integer, Integer>> rightLeft = List.of(
+        private List<Triple<Integer, Integer, Integer>> rightLeft = Arrays.asList(
                 new ImmutableTriple<>(1, 1, 1),
                 new ImmutableTriple<>(2, 2, null),
                 new ImmutableTriple<>(4, 4, null)
         );
 
-        private List<Triple<Integer, Integer, Integer>> leftRight = List.of(
+        private List<Triple<Integer, Integer, Integer>> leftRight = Arrays.asList(
                 new ImmutableTriple<>(1, 1, 1),
                 new ImmutableTriple<>(3, 3, null),
                 new ImmutableTriple<>(5, 5, null)
         );
 
-        private List<Pair<Integer, Integer>> right = List.of(
+        private List<Pair<Integer, Integer>> right = Arrays.asList(
                 new ImmutablePair<>(1, 1),
                 new ImmutablePair<>(2, 2),
                 new ImmutablePair<>(4, 4)
         );
 
-        private List<Pair<Integer, Integer>> left = List.of(
+        private List<Pair<Integer, Integer>> left = Arrays.asList(
                 new ImmutablePair<>(1, 1),
                 new ImmutablePair<>(3, 3),
                 new ImmutablePair<>(5, 5)
